public/css/dashboard.css
@import "modules/form.css";
@import "modules/spinner.css";
@import "modules/notification.css";
@import "modules/kebab.css";
@import "modules/share-group.css";
@import "modules/modal.css";

body {
	height: 100dvh;
	z-index: 1;
	background-color: var(--grey);

	@media (max-width: 768px) {
		position: relative;
		flex-direction: column;
	}
}

#nav-mobile {
	display: flex;
	position: fixed;
	width: 100vw;
	height: 100%;
	z-index: 2;
	overflow: hidden;
	transition: height 0.5s;

	background-color: var(--primary);

	&.collapse {
		height: 62px;
	}

	&.expand {
		height: 100dvh;
	}

	& .nav-container {
		padding: 0.5rem;
		min-height: 100dvh;
		justify-content: space-between;

		& .nav-menu {
			height: max-content;
			width: 100%;
			gap: 1rem;
			align-items: center;
            
            & .btn-hamburger{
                margin: 0.5rem;
            }
            
            & .btn-hover-dim{
                padding: 0;
            }

			& .groups-buttons{
				width: 100%;
				gap:1rem;
				
				& button{
					margin-right: 0.4rem;
				}
			}
			
			& .search-container {
				justify-content: center;
				& .input{
					font-size: 0.8rem;
				}
			}
		}

		& #nav-content {
			gap: 1rem;
			
			& #nav-user-info{
				gap: 1rem;
				
				& .profile-photo {
					border-radius: 50%;
					overflow: hidden;
					width: 30vw;
					height: 30vw;
					max-width: 300px;
					max-height: 300px;

					& img {
						width:100%;
						height:100%;
						object-fit: cover;
					}

					& svg{
						width: 70%;
						height: auto;
					}
				}
			}

			& .footer-logo {
				padding: 0;
			}
		}

		& .nav-menu,
		& .search-container,
		& input {
			width: 100%;
		}
	}
}

aside {
	height: 100dvh;
	padding: 0.75rem;
	background-color: var(--primary);
	color: #fff;

	& nav {
		height: 100%;
		justify-content: space-between;
	}

	& ul {
		height: 100%;
		padding: 0;
		gap: 2rem;
		list-style: none;
	}

	& a {
		display: flex;
		padding: 0.5rem;
		justify-content: center;
		border-radius: 0.75rem;
		text-decoration: none;

		&.active,
		&.active:hover {
			background-color: var(--secondary);
			& path {
				fill: var(--primary);
			}
		}

		&:hover {
			background-color: var(--primary-light);
		}
	}

	@media (max-height: 400px) {
		& ul {
			gap: 0.5rem;
		}
	}
}

main {
	position: relative;
	width: 100%;
	min-height: 100dvh;
	overflow: scroll;
	padding: 1rem;

	& section,
	& .search-container,
	& .input {
		width: 100%;
	}
	
	& #page-container{
		height: 100%;
	}

	& .page-links {
		height: 100%;
		align-items: center;
		gap: 1rem;

		& button{
			padding: 0.25rem;
			border-radius: 0.75rem;
		}

		& .search-container {
			gap: 1rem;

			& .btn-menu {
				border-radius: 0.75rem;
				padding: 0.25rem;
				
				& path{
					fill: var(--tertiary);
				}
			}

			& input {
				width: 100%;
			}
		}

		& .groups-container {
			display: grid;
			width: 100%;
			padding: 0 1rem;

			justify-content: center;
			grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
			row-gap: 1rem;
			column-gap: 2rem;
		}

		@media (max-width: 1200px) {
			& .groups-container {
				grid-template-columns: repeat(auto-fit, minmax(200px, 40vw));
			}
		}

		@media (max-width: 850px) {
			& .groups-container {
				padding: 0.5rem;
				grid-template-columns: repeat(auto-fit, minmax(200px, 600px));
			}
		}

		& .link-placeholder{
			width: 100%;
			align-self: center;

			padding: 1rem;
			border-radius: 1rem;

			font-size: 1.2rem;
			color: var(--tertiary);
			background-color: rgb(169, 169, 169, 0.1);
		}

		& .group {
			width: 100%;
			max-height: 44vh;
			padding-bottom: 0;

			& .group-menu {
				min-height: 43px;
				padding: 0.5rem 0.25rem;
				justify-content: space-between;
				align-items: center;

				& .group-info {
					min-width: 0;
					padding: 0 0.5rem;
					gap: 1rem;
					font-size: 1.5rem;
					align-items: center;
				}
				
				& .group-buttons{
					gap: 1rem;
				}

				& .btn-group-collapse {
					transition: 0.5s;
				}

				& .btn-group-collapse.active {
					transform: rotate(-90deg);
				}

				& path {
					fill: var(--tertiary);
				}
				
				& img {
					border-radius: 50%;
				}
			}

			& .group-links {
				height: 100%;
				min-height: min-content;
				padding: 0.5rem;
				padding-top: 0.25rem;
				
				gap: 1rem;
				border-radius: 1rem;
				transition: 0.5s;

				overflow: scroll;
				overflow-x: hidden;

				& .link-container {
					padding: 0.75rem;
					align-items: center;
					justify-content: space-between;

					border-radius: 1rem;
					box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
					background-color: white;
				}
				
				& .link-title{
					font-size: 1.1rem;
				} 
				
				& .link-text {
					padding: 0 0.75rem;
				}

				& .link-info,
				& .link-text {
					min-width: 0;
				}
				
				& img{
					border-radius: 0.5rem;
				}
				
				& .link-buttons {
					gap: 1rem;
				}
				
				& .link-edit {
					padding-left: 0.25rem;
					& .btn-link {
						display: none;
					}
					
					& .btn-drag,
					.btn-edit,
					.btn-delete {
						display: flex;
					}
				}

				& path{
					fill: var(--primary);
				}

				&.collapse {
					height: 0;
					min-height: 0;
					padding: 0;
					margin: 0;
				}
			}
			
			& .input{
				display: none;
			}
		}

		& .group-edit{
			& .kebab{
				display: none;
			}

			& .done-btn,
			.cancel-btn{
				display: block;
			}
			
			& .input{
				display: block;
				width: 60%;
				max-width: 250px;
				padding: 0.5rem;
				font-size: 1.5rem;
			}
		}
	}

	& #page-shared {
		.group-menu {
			padding-right: 0.5rem;
		}
	}

	& #page-settings {
		height: 100%;
		justify-content: space-evenly;
		gap: 1rem;

		& .profile-container {
			width: 50%;
			max-width: 500px;
			max-height: 100%;

			padding: 3rem;
			margin: 3rem;
			gap: 3rem;

			border-radius: 1.5rem;
			background-color: var(--secondary);

			& .profile-photo {
				border-radius: 50%;
				overflow: hidden;
				width: 25vw;
				height: 25vw;
				max-width: 300px;
				max-height: 300px;
				
				& img {
					width:100%;
					height:100%;
					object-fit: cover;
				}

				& svg{
					width: 70%;
					height: auto;

					& path {
						fill: var(--primary);
					}
				}
			}
			
			& .profile-info{
				font-size: 1.2rem;
			}

			@media (max-width: 768px) {
				& {
					padding: 2rem;
					margin: 1rem;
					width: 90%;
					gap: 1rem;
					
					& .profile-photo{
						width: 40vw;
						height: 40vw;
					}
					
					& .profile-info{
						font-size: 1rem;
					}
					
				}
			}
		}

		& .settings-container {
			width: 50%;
			max-width: 500px;
			max-height: 80vh;
			margin: 1rem;
			padding: 1rem;
			
			gap: 1.5rem;
			overflow: scroll;

			& .btn-primary {
				min-width: 200px;
				max-width: 400px;
			}

			& #btn-delete-account {
				& span {
					color: red !important;
				}
			}

			@media (max-width: 768px) {
				& {
					width: 100%;
					padding-top: 1.5rem;
				}
			}
		}
		
		@media (max-width: 768px) {
			flex-direction: column;
		}
	}

	@media (max-width: 768px) {
		position: absolute;
		min-height: calc(100% - 2*62px);
		max-height: calc(100% - 2*62px);
		top: 62px;
		padding: 0;
	}
}

footer {
	position: fixed;
	height: 62px;
	width: 100%;
	bottom: 0;

	& .footer-container {
		width: 100%;
		padding: 0.5rem;
	}

	& .btn-container {
		display: flex;
		width: 50vw;
		padding: 0.5rem;

		justify-content: center;
		border-radius: 2rem;

		& svg path {
			fill: var(--primary);
		}

		&.active {
			background-color: var(--primary);
			& path {
				fill: var(--secondary);
			}
		}
	}
}

/* Reusable classes */

.line-vertical-primary {
	height: 30%;
	border-left: 2px solid var(--primary);
	border-radius: 2rem;
}

.line-horizontal-secondary {
	width: 50%;
	border-bottom: 2px solid var(--secondary);
	border-radius: 2rem;
}

.hidden {
	display: none;
}

.hide-on-scroll {
	transition: height 0.5s;
}

.scroll-hidden {
	height: 0 !important;
	padding: 0;
	overflow: hidden;
	transition: 0.5s; /* Smooth transition over 0.5s */
}

.btn-hamburger {
	position: relative;
	display: flex;
	align-items: center;
	cursor: pointer;
	transition-duration: 0.5s;

	--width: 30px;
	--height: 30px;
	--bar-height: calc(var(--height) / 7);
	--bar-gap: calc(var(--height) / 3);
	--color: var(--secondary);

	width: var(--width);
	height: var(--height);

	.bar {
		transition-duration: 0.5s;
		position: relative;
		height: var(--bar-height);
		width: var(--width);
		background-color: var(--color);

		&:before {
			transition-duration: 0.5s;
			position: absolute;
			height: var(--bar-height);
			width: var(--width);
			top: calc(-1 * var(--bar-gap));
			left: 0;
			background-color: var(--color);
			content: "";
		}

		&:after {
			transition-duration: 0.5s;
			position: absolute;
			height: var(--bar-height);
			width: var(--width);
			top: var(--bar-gap);
			left: 0;
			background-color: var(--color);
			content: "";
		}
	}

	&.open {
		.bar {
			transition-duration: 0.5s;
			background: transparent;

			&:before {
				transform: rotateZ(45deg) scaleX(1.25) translate(6.5px, 6.5px);
			}

			&:after {
				transform: rotateZ(-45deg) scaleX(1.25) translate(6px, -6px);
			}
		}
	}
}

/* hide scrollbar */
* {
	/* Hide scrollbar for Chrome, Safari and Opera */
	*::-webkit-scrollbar {
		display: none;
	}

	/* Hide scrollbar for IE, Edge and Firefox */
	* {
		-ms-overflow-style: none; /* IE and Edge */
		scrollbar-width: none; /* Firefox */
	}
}

